[package]
name = "sqlactix"
version = "0.1.0"
authors = ["Bart Willems <bwillems@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
anyhow = "1"
derive_more = "0.99"
dotenv = "0.15.0"
env_logger = "0.8"
log = "0.4"
sqlx = { version = "0.4", features = [ "postgres", "runtime-actix-rustls", "migrate", "macros" ] }
serde = "1"
serde_json = "1"

[profile.release]
lto = "thin"
